refactoring: migrated to java-11, mysql